force-app/main/default/objects/SocialPost/fields/CC_FechaCreaLocal__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaCreaLocal__c</fullName>
    <description>Fecha de creación del post en horario local</description>
    <formula>LPAD(TEXT(DAY(DATEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24)))),2,&apos;0&apos;)+&apos;/&apos;+
LPAD(TEXT(MONTH(DATEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24)))),2,&apos;0&apos;)+&apos;/&apos;+
TEXT(YEAR(DATEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24))))+&apos; &apos;+
LPAD(TEXT(HOUR(TIMEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24)))),2,&apos;0&apos;)+&apos;:&apos;+
LPAD(TEXT(MINUTE(TIMEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24)))),2,&apos;0&apos;)+&apos;:&apos;+
LPAD(TEXT(SECOND(TIMEVALUE(Posted+(BLANKVALUE(CC_ZonaHoraria__c, 0)/24)))),2,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fecha de creación del post en horario local</inlineHelpText>
    <label>Fecha creación local</label>
    <type>Text</type>
</CustomField>