force-app/main/default/objects/SocialPost/fields/CC_NumRT__c.field-meta.xml
<CustomField>
    <fullName>CC_NumRT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número de RTs del post</description>
    <inlineHelpText>Número de RTs del post</inlineHelpText>
    <label>Número RT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>