force-app/main/default/objects/SocialPost/fields/CC_ReclamacionActiva__c.field-meta.xml
<CustomField>
    <fullName>CC_ReclamacionActiva__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicador que las reclamaciones están activas para el social post</description>
    <inlineHelpText>Indicador que las reclamaciones están activas para el social post</inlineHelpText>
    <label>Reclamación activa</label>
    <type>Checkbox</type>
</CustomField>