force-app/main/default/objects/SocialPost/fields/CC_Respuesta_Reclamada__c.field-meta.xml
<CustomField>
    <fullName>CC_Respuesta_Reclamada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si se ha reclamado respuesta a la solicitud de información</description>
    <label>Respuesta reclamada</label>
    <type>Checkbox</type>
</CustomField>