force-app/main/default/objects/SocialPost/fields/CC_Solicitud_Informacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Solicitud_Informacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si el Post se trata de una solicitud de información al cliente y por tanto requiere respuesta</description>
    <label>Solicitud información</label>
    <type>Checkbox</type>
</CustomField>