force-app/main/default/objects/SocialPost/validationRules/CC_Bloquear_RT.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Bloquear_RT</fullName>
    <active>true</active>
    <description>Bloqueamos los RT</description>
    <errorConditionFormula>AND(
				 !($Permission.CC_Social_Retuit), 
				ISPICKVAL(MessageType,&quot;Retweet&quot;), 
				IsOutbound 
				)</errorConditionFormula>
    <errorMessage>No tienes permisos para realizar un RT.</errorMessage>
</ValidationRule>