force-app/main/default/objects/SocialPost/listViews/AllSocialPosts.listView-meta.xml
<ListView>
    <fullName>AllSocialPosts</fullName>
    <columns>MessageType</columns>
    <columns>Name</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Parent</columns>
    <columns>CC_ParentPost__c</columns>
    <columns>CC_NumRT__c</columns>
    <columns>Provider</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All social posts</label>
</ListView>