force-app/main/default/objects/SocialPost/listViews/CC_Posts_Retwitteados.listView-meta.xml
<ListView>
    <fullName>CC_Posts_Retwitteados</fullName>
    <columns>LastModifiedDate</columns>
    <columns>CC_NumRT__c</columns>
    <columns>MessageType</columns>
    <columns>Name</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Parent</columns>
    <columns>CC_ParentPost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CC_NumRT__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Parent</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>Posts Retwitteados</label>
</ListView>