force-app/main/default/objects/SocialPost/listViews/CC_Twitter_SocialPost.listView-meta.xml
<ListView>
    <fullName>CC_Twitter_SocialPost</fullName>
    <columns>Name</columns>
    <columns>Persona</columns>
    <columns>Content</columns>
    <columns>Posted</columns>
    <columns>Parent</columns>
    <columns>ReviewedStatus</columns>
    <columns>Notes</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Twitter</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>